# astrocamera-code

./: .gitmodules  CMakeLists.txt  STM32F446XX_FLASH.ld  board.cfg  flash.sh  run-ocd.sh
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  sysmem.c
USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_customhid_if.c  usbd_desc.c
board/: board.cfg  board.jtag  flash.sh  ftdi.cfg  run-ocd.sh
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/include/: config.h  core.h  gpio.h  i2c.h  qspi.h  shell.h  spi.h  stm32f4xx_it.h  uart.h
src/application/include/hw/: fpga-ctl.h  gpio.h  i2c.h  pll.h  qspi.h  quadspi.h  spi.h  system_clock.h  uart.h
src/application/src/: config.c  core.c  ctl_spi.c  gpio.c  i2c.c  main.c  qspi.c  shell.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  sysmem.c  system.c  system_clock.c  system_stm32f4xx.c  uart.c  usb.c
src/application/src/hw/: fpga-ctl.c  gpio.c  i2c.c  pll.c  qspi.c  quadspi.c  spi.c  system_clock.c  uart.c  usb.c
src/system/: CMakeLists.txt
src/system/include/: system.h
src/system/src/: system.c
src/system_config/: CMakeLists.txt
src/system_config/include/: FreeRTOSConfig.h  main.h  pinout.h  stm32f4xx_hal_conf.h  system_config.h  usbd_conf.h
src/usb_device/: CMakeLists.txt
src/usb_device/include/: camera.h  camera_descriptor.h  camera_internal.h  usb_device.h  usbd_composite_builder.h  usbd_customhid.h  usbd_customhid_if.h  usbd_desc.h  usbd_video.h  usbd_video_if.h
src/usb_device/src/: camera.c  camera_cdc_acm.c  camera_cdc_data.c  camera_descriptor.c  camera_dfu.c  camera_hid.c  camera_setup_hid.c  camera_setup_req_class_uvc.c  camera_setup_req_standard.c  camera_setup_vc.c  camera_setup_vs.c  camera_vc.c  camera_vs.c  device_descriptor.c  usb_device.c  usbd_composite_builder.c  usbd_conf.c  usbd_customhid.c  usbd_customhid_if.c  usbd_desc.c  usbd_video.c  usbd_video_if.c
utils/: genconfig.py
